--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,15 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "https://localhost:3001",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "http-proxy-middleware": "^1.0.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
