--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.2"
+    "mongoose": "^5.9.2",
+    "nodemailer": "^6.4.4"
   }
 }
