--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.12.0",
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-social-icons": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
