--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-scrollspy": "^3.4.2",
     "react-social-icons": "^4.1.0"
   },
   "scripts": {
